Financing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financing
  template:
    metadata:
      labels:
        app: financing
    spec:
      containers:
      - name: financing
        image: financing
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: financing-service
spec:
  selector:
    app: financing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
